[package]
name = "commit"
license = "MIT"
edition = "2021"
version = "0.0.0"
repository = "https://github.com/m1guelpf/commit"
authors = ["Miguel Piedrafita <sup@miguel.build>"]
description = "Open-source Git client for minimalists"

[dependencies]
rayon = "1.7.0"
walkdir = "2.3.3"
anyhow = "1.0.72"
serde_json = "1.0"
priority-queue = "1.3.2"
window-vibrancy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
git2 = { version = "0.17.2", default-features = false }
tauri-plugin-spotlight = { git = "https://github.com/zzzze/tauri-plugin-spotlight" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
directories = "5.0.1"
toml = "0.7.6"
thiserror = "1.0.44"


[dependencies.tauri]
version = "1.4"
features = ["window-start-dragging", "macos-private-api", "system-tray", "config-toml", "global-shortcut", "notification", "dialog"]

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.4", features = ["config-toml"] }
