[package]
name = "commit"
license = "MIT"
edition = "2021"
version = "1.0.2"
repository = "https://github.com/m1guelpf/commit"
authors = ["Miguel Piedrafita <sup@miguel.build>"]
description = "Open-source Git client for minimalists"

[dependencies]
toml = "0.7.6"
rayon = "1.7.0"
walkdir = "2.3.3"
anyhow = "1.0.72"
serde_json = "1.0"
thiserror = "1.0.44"
directories = "5.0.1"
priority-queue = "1.3.2"
window-vibrancy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
git2 = { version = "0.17.2", default-features = false }
tauri-plugin-spotlight = { git = "https://github.com/zzzze/tauri-plugin-spotlight" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri = { version = "1.4", features = [
    "dialog",
    "updater",
    "system-tray",
    "config-toml",
    "notification",
    "global-shortcut",
    "macos-private-api",
    "window-start-dragging",
] }


[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.4", features = ["config-toml"] }
