[package]
name = "commit"
license = "MIT"
edition = "2021"
version = "0.0.0"
repository = "https://github.com/m1guelpf/commit"
authors = ["Miguel Piedrafita <sup@miguel.build>"]
description = "Open-source Git client for minimalists"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
window-vibrancy = "0.4.0"
git2 = { version = "0.17.2", default-features = false }
rayon = "1.7.0"
crossbeam = "0.8.2"
walkdir = "2.3.3"
priority-queue = "1.3.2"

[dependencies.tauri]
version = "1.4"
features = [
    "macos-private-api",
    "system-tray",
    "shell-open",
    "config-toml",
    "global-shortcut",
]

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.4", features = ["config-toml"] }

[dev-dependencies]
tokio = { version = "1.29.1", features = ["macros"] }
